# drift-funding-monitor

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dfm/: __init__.py  __main__.py  backtest.py  report.py  risk.py  runner.py  signals.py  state.py  synthetic.py  venues.py
tests/: test_backtest_and_runner.py  test_cli_and_report.py  test_risk.py  test_signals.py  test_state.py  test_venue_parsers.py
